# spy-look

./: .gitignore  LICENSE  README.md  boot.bat  main.py  pyproject.toml
api/: app.py  auth.py  boot.bat  capability_probe.py  config.py  dependencies.py  errors.py  log_pipeline.py  main.py  pyproject.toml  schemas.py  upstream_client.py  usage.py  utils.py
api/db/: __init__.py  client_keys.py  engine.py  logs.py  md_documents.py  models.py  public_models.py  upstreams.py
api/routes/: admin.py  gateway.py  logs.py
api/services/: capability_probe.py  log_pipeline.py  upstream_client.py  utils.py
api/tools/doc_tools/: router.py  schemas.py
api/tools/doc_tools/routes/: admin.py  md_reader.py
api/tools/doc_tools/services/: md_heading_numbering.py  md_to_docx.py
api/tools/gateway/: router.py  schemas.py
api/tools/gateway/routes/: admin.py  logs.py  v1.py
api/tools/gateway/services/: capability_probe.py  embedding_probe.py  log_pipeline.py  model_router.py  rerank_probe.py  token_speed_test.py  upstream_client.py
api/tools/settings/: router.py  schemas.py
api/tools/settings/routes/: admin.py
api/tools/settings/services/: config_loader.py  llm.py
api/tools/video_tools/: router.py  schemas.py
api/tools/video_tools/routes/: admin.py
api/tools/video_tools/services/: config_loader.py  vad_split.py  video_resolver.py  voice_to_text.py
docs/: sse-streaming-progress-guide.md
openspec/: config.yaml
ui/: index.html  package-lock.json  package.json  tmp-ol-test.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.vue  (+3 more)
web/: index.html  (+2 more)
(+46 files in other folders)
