[project]
name = "spy-look"
version = "0.2.0"
description = "Spy-Look: 个人工具合集（含 OpenAI 兼容 LLM 网关、可观测与模型能力探测）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "uvicorn>=0.48.0",
    "sqlmodel>=0.0.22",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
    "moviepy>=2.0.0",
    "python-multipart>=0.0.9",
    "yt-dlp>=2025.1.0",
]
